--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "#dependencies\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import helper\n",
@@ -62,7 +63,6 @@
    },
    "outputs": [],
    "source": [
-    "# 在后面的new_feed函数中返回的就是这样的三个值\n",
     "encoder_inputs = tf.placeholder(shape = (None, None), dtype = tf.int32, name = 'encoder_inputs')\n",
     "encoder_inputs_length = tf.placeholder(shape = (None,), dtype = tf.int32, name = 'encoder_inputs_length')\n",
     "decoder_targets = tf.placeholder(shape=(None, None), dtype = tf.int32, name = 'decoder_targets')"
@@ -76,7 +76,6 @@
    },
    "outputs": [],
    "source": [
-    "#理解成将输入值转换成密码形式吧，编码输入\n",
     "embeddings = tf.Variable(tf.random_uniform([vocab_size, input_embedding_size], -1.0, 1.0), dtype = tf.float32)\n",
     "\n",
     "encoder_inputs_embedded = tf.nn.embedding_lookup(embeddings, encoder_inputs)\n"
@@ -96,17 +95,20 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# 编码层是20层，解码层40层\n",
     "encoder_cell = LSTMCell(encoder_hidden_units)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 98,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -125,7 +127,9 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "encoder_outputs = tf.concat((encoder_fw_outputs, encoder_bw_outputs), 2)\n",
@@ -153,7 +157,7 @@
    },
    "outputs": [],
    "source": [
-    "#TODO:not quite sure about this\n",
+    "\n",
     "ecoder_max_time, batch_size = tf.unstack(tf.shape(encoder_inputs))"
    ]
   },
@@ -183,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#bias\n",
@@ -193,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "assert EOS == 1 and PAD == 0\n",
@@ -276,7 +284,9 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#解码始于此\n",
@@ -307,7 +317,9 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "decoder_max_steps, decoder_batch_size, decoder_dim = tf.unstack(tf.shape(decoder_outputs))\n",
