semi trans en-fr untested kernal keep dying

--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -20,26 +20,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.3.0'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "tf.__version__"
+    "# load data\n",
+    "\n",
+    "en_train_sentences, en_test_sentences, en_vocab_size, en_char_to_ix, en_ix_to_char = helper.data_info('data/small_vocab_en')\n",
+    "fr_train_sentences, fr_test_sentences, fr_vocab_size, fr_char_to_ix, fr_ix_to_char = helper.data_info('data/small_vocab_fr')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +42,7 @@
     "PAD = 0\n",
     "EOS = 1\n",
     "\n",
-    "vocab_size = helper.vocab_size\n",
+    "vocab_size = max(en_vocab_size, fr_vocab_size)\n",
     "input_embedding_size = vocab_size * 2\n",
     "\n",
     "encoder_hidden_units = 20\n",
@@ -57,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -66,12 +60,12 @@
     "encoder_inputs = tf.placeholder(shape = (None, None), dtype = tf.int32, name = 'encoder_inputs')\n",
     "encoder_inputs_length = tf.placeholder(shape = (None,), dtype = tf.int32, name = 'encoder_inputs_length')\n",
     "decoder_targets = tf.placeholder(shape=(None, None), dtype = tf.int32, name = 'decoder_targets')\n",
-    "decoder_targets_length = encoder_inputs_length"
+    "decoder_targets_length = encoder_inputs_length = tf.placeholder(shape = (None,), dtype = tf.int32, name = 'encoder_inputs_length')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -84,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -127,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -141,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -152,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -175,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -186,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -203,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -255,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -283,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -297,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -308,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -327,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -338,57 +332,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "By the w\n",
-      "ay, toge\n",
-      "ther wit\n",
-      "h this p\n",
-      "ost I am\n",
-      " also re\n",
-      "leasing \n",
-      "code on \n",
-      "Github t\n",
-      "hat allo\n"
-     ]
-    }
-   ],
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "batch_size = 1000\n",
-    "batches = helper.generate_sequence(8, batch_size)\n",
-    "for b in next(batches)[:10]:\n",
-    "    print(helper.decode(b))"
+    "en_batches = helper.generate_trans_sequence(en_train_sentences, en_char_to_ix)\n",
+    "fr_batches = helper.generate_trans_sequence(fr_train_sentences, fr_char_to_ix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def next_feed():\n",
-    "    batch = next(batches)\n",
-    "    input_batch = batch[:-1]\n",
-    "    output_batch = batch[1:]\n",
+    "    input_batch = next(en_batches)\n",
+    "    output_batch = next(fr_batches)\n",
     "    encoder_inputs_, encoder_input_lengths_ = helper.batch(input_batch)\n",
-    "    decoder_targets_,_ = helper.batch(output_batch)\n",
+    "    decoder_targets_,decoder_targets_length_ = helper.batch(output_batch)\n",
     "    return {\n",
     "        encoder_inputs: encoder_inputs_,\n",
     "        encoder_inputs_length: encoder_input_lengths_,\n",
-    "        decoder_targets: decoder_targets_\n",
+    "        decoder_targets: decoder_targets_,\n",
+    "        decoder_targets_length: decoder_targets_length_\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -399,119 +376,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "batch 0\n",
-      "  minibatch loss: 3.8551406860351562\n",
-      "  sample 1:\n",
-      "    input          > [37  4 30 22 38 17 30 39]\n",
-      "    decode input   > By the w\n",
-      "    output         > [27  4 19 30 22 34 10 17]\n",
-      "    decode output  > ay, toge\n",
-      "    predicted      > [26 23 22 20  5 14 38 12]\n",
-      "    decode predict > RNt;rlhI\n",
-      "  sample 2:\n",
-      "    input          > [27  4 19 30 22 34 10 17]\n",
-      "    decode input   > ay, toge\n",
-      "    output         > [22 38 17  5 30 39 11 22]\n",
-      "    decode output  > ther wit\n",
-      "    predicted      > [ 4  4  2  2 16 16 16 23]\n",
-      "    decode predict > yySS’’’N\n",
-      "  sample 3:\n",
-      "    input          > [22 38 17  5 30 39 11 22]\n",
-      "    decode input   > ther wit\n",
-      "    output         > [38 30 22 38 11 40 30 31]\n",
-      "    decode output  > h this p\n",
-      "    predicted      > [ 8 23 23  6 20  6 26 20]\n",
-      "    decode predict > GNNf;fR;\n",
-      "\n",
-      "batch 1000\n",
-      "  minibatch loss: 2.3935910576255992e-05\n",
-      "  sample 1:\n",
-      "    input          > [37  4 30 22 38 17 30 39]\n",
-      "    decode input   > By the w\n",
-      "    output         > [27  4 19 30 22 34 10 17]\n",
-      "    decode output  > ay, toge\n",
-      "    predicted      > [27  4 19 30 22 34 10 17]\n",
-      "    decode predict > ay, toge\n",
-      "  sample 2:\n",
-      "    input          > [27  4 19 30 22 34 10 17]\n",
-      "    decode input   > ay, toge\n",
-      "    output         > [22 38 17  5 30 39 11 22]\n",
-      "    decode output  > ther wit\n",
-      "    predicted      > [22 38 17  5 30 39 11 22]\n",
-      "    decode predict > ther wit\n",
-      "  sample 3:\n",
-      "    input          > [22 38 17  5 30 39 11 22]\n",
-      "    decode input   > ther wit\n",
-      "    output         > [38 30 22 38 11 40 30 31]\n",
-      "    decode output  > h this p\n",
-      "    predicted      > [38 30 22 38 11 40 30 31]\n",
-      "    decode predict > h this p\n",
-      "\n",
-      "batch 2000\n",
-      "  minibatch loss: 6.742837285855785e-06\n",
-      "  sample 1:\n",
-      "    input          > [37  4 30 22 38 17 30 39]\n",
-      "    decode input   > By the w\n",
-      "    output         > [27  4 19 30 22 34 10 17]\n",
-      "    decode output  > ay, toge\n",
-      "    predicted      > [27  4 19 30 22 34 10 17]\n",
-      "    decode predict > ay, toge\n",
-      "  sample 2:\n",
-      "    input          > [27  4 19 30 22 34 10 17]\n",
-      "    decode input   > ay, toge\n",
-      "    output         > [22 38 17  5 30 39 11 22]\n",
-      "    decode output  > ther wit\n",
-      "    predicted      > [22 38 17  5 30 39 11 22]\n",
-      "    decode predict > ther wit\n",
-      "  sample 3:\n",
-      "    input          > [22 38 17  5 30 39 11 22]\n",
-      "    decode input   > ther wit\n",
-      "    output         > [38 30 22 38 11 40 30 31]\n",
-      "    decode output  > h this p\n",
-      "    predicted      > [38 30 22 38 11 40 30 31]\n",
-      "    decode predict > h this p\n",
-      "\n",
-      "batch 3000\n",
-      "  minibatch loss: 3.941079739888664e-06\n",
-      "  sample 1:\n",
-      "    input          > [37  4 30 22 38 17 30 39]\n",
-      "    decode input   > By the w\n",
-      "    output         > [27  4 19 30 22 34 10 17]\n",
-      "    decode output  > ay, toge\n",
-      "    predicted      > [27  4 19 30 22 34 10 17]\n",
-      "    decode predict > ay, toge\n",
-      "  sample 2:\n",
-      "    input          > [27  4 19 30 22 34 10 17]\n",
-      "    decode input   > ay, toge\n",
-      "    output         > [22 38 17  5 30 39 11 22]\n",
-      "    decode output  > ther wit\n",
-      "    predicted      > [22 38 17  5 30 39 11 22]\n",
-      "    decode predict > ther wit\n",
-      "  sample 3:\n",
-      "    input          > [22 38 17  5 30 39 11 22]\n",
-      "    decode input   > ther wit\n",
-      "    output         > [38 30 22 38 11 40 30 31]\n",
-      "    decode output  > h this p\n",
-      "    predicted      > [38 30 22 38 11 40 30 31]\n",
-      "    decode predict > h this p\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "max_batches = 3001\n",
     "batches_in_epoch = 1000\n",
     "\n",
     "try:\n",
+    "    print('start training')\n",
     "    for batch in range(max_batches):\n",
     "        fd = next_feed()\n",
     "        _, l = sess.run([train_op, loss], fd)\n",
@@ -524,15 +400,15 @@
     "            for i, (inp, out, pred) in enumerate(zip(fd[encoder_inputs].T, fd[decoder_targets].T, predict_.T)):\n",
     "                print('  sample {}:'.format(i + 1))\n",
     "                print('    input          > {}'.format(inp))\n",
-    "                print('    decode input   > {}'.format(helper.decode(inp)))\n",
+    "                print('    decode input   > {}'.format(helper.decode_trans('en', inp, en_ix_to_char)))\n",
     "                print('    output         > {}'.format(out))\n",
-    "                print('    decode output  > {}'.format(helper.decode(out)))\n",
+    "                print('    decode output  > {}'.format(helper.decode('fr', out, fr_ix_to_char)))\n",
     "                print('    predicted      > {}'.format(pred))\n",
-    "                print('    decode predict > {}'.format(helper.decode(pred)))\n",
+    "                print('    decode predict > {}'.format(helper.decode('fr', pred, en_ix_to_char)))\n",
     "                if i >= 2:\n",
     "                    break\n",
     "            print()\n",
-    "\n",
+    "    print('end training')\n",
     "except KeyboardInterrupt:\n",
     "    print('training interrupted')"
    ]
@@ -585,26 +461,22 @@
    "source": [
     "# test\n",
     "\n",
+    "en_batches = helper.generate_trans_sequence(en_test_sentences, en_char_to_ix)\n",
+    "fr_batches = helper.generate_trans_sequence(fr_test_sentences, fr_char_to_ix)\n",
     "\n",
-    "init_input = [[helper.char_to_ix[ch] for ch in helper.data[:8]]]\n",
-    "strings = helper.decode(init_input[0])\n",
-    "def next_feed(previous_output):\n",
-    "    encoder_inputs_, encoder_input_lengths_ = helper.batch(previous_output)\n",
-    "    return {\n",
-    "        encoder_inputs: encoder_inputs_,\n",
-    "        encoder_inputs_length: encoder_input_lengths_,\n",
-    "    }\n",
-    "max_batches = 3001\n",
-    "batches_in_epoch = 1000\n",
+    "\n",
+    "max_batches = 30\n",
     "\n",
     "try:\n",
     "    previous_output = init_input\n",
     "    for batch in range(max_batches):\n",
-    "        fd = next_feed(previous_output)\n",
+    "        fd = next_feed()\n",
     "        predict_ = sess.run(decoder_prediction, fd)\n",
-    "        for pred in predict_.T:\n",
-    "            strings += helper.decode(pred)\n",
-    "        previous_output = predict_.T\n",
+    "        for inp, pred in zip(fd[encoder_inputs].T, predict_.T):\n",
+    "            print('    input          > {}'.format(inp))\n",
+    "            print('    decode input   > {}'.format(helper.decode_trans('en', inp, en_ix_to_char)))\n",
+    "            print('    predicted      > {}'.format(pred))\n",
+    "            print('    decode predict > {}'.format(helper.decode('fr', pred, en_ix_to_char)))\n",
     "    print(strings)\n",
     "except KeyboardInterrupt:\n",
     "    print('training interrupted')"
@@ -622,9 +494,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
