--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -97,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "((encoder_fw_outputs,\n",
@@ -346,7 +348,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def next_feed():\n",
